# seleric_systems

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.ps1  start.sh  turbo.json
.claude/: settings.local.json
.cursor/rules/: 00-general.mdc  02-agents.mdc  (+4 more)
config/: rules.yaml
docs/: ARCHITECTURE.md  CHAT.md  DATA_FLOW.md  FOLDER_STRUCTURE.md  REQUIREMENTS.md  TECH_STACK.md  cogs_simulation_calculation.md  seleric_queries_reference.md
services/orchestrator/: Dockerfile  pyproject.toml  requirements.txt  sandbox_server.py
services/orchestrator/scripts/: test_cube_mcp.py
services/orchestrator/src/: exceptions.py  graph.py  main.py  state.py
services/orchestrator/src/api/: routes.py  schemas.py
services/orchestrator/src/db/: client.py  insight_store.py
services/orchestrator/src/llm/: client.py
services/orchestrator/src/memory/: cube_client.py  redis_client.py  vector_client.py
services/orchestrator/src/nodes/: assemble_context.py  dispatch_actions.py  guardrail.py  persist_results.py  route_agents.py  run_agents.py  validate_signal.py
services/orchestrator/src/prompts/: guardrail.j2  insight.j2  meta.j2  shopify.j2
services/orchestrator/src/sandbox/: executor.py  routes.py
services/orchestrator/src/schemas/: __init__.py  action.py  agent.py  insight.py  signal.py
services/orchestrator/src/tools/: clickhouse.py  pipeboard.py  query_guard.py
services/orchestrator/tests/: conftest.py  test_context_assembly.py  test_graph.py  test_guardrail.py
(+190 files in other folders)
