[project]
name = "multiagent-orchestrator"
version = "0.1.0"
description = "Orchestrator service — LangGraph + FastAPI multi-agent brain"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # LangGraph + AI
    "langgraph>=0.2.0",
    "litellm>=1.40.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",

    # Redis
    "redis>=5.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Templating
    "jinja2>=3.1.4",

    # Config
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",

    # Logging
    "structlog>=24.1.0",

    # Utilities
    "python-multipart>=0.0.9",
    "PyJWT>=2.8.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
